app/src/main/java/com/example/app/errors/InvalidVerificationTokenException.java
package com.example.app.errors;

public class InvalidVerificationTokenException extends RuntimeException {
    public InvalidVerificationTokenException(String message) {
        super(message);
    }

    @Override
    public String getMessage() {
        return super.getMessage();
    }
}
